<resources>
    <string name="app_name">NextHand</string>
    <string name="startup_failure">NextHand wasn\'t able to generate a location for this device. Please exit and try again</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">Hello, %1$s!</string>
    <string name="inquire_user">Inquire %1$s</string>
    <string name="borrow_inquiry">Would like to borrow your %1$s</string>
    <string name="donation_inquiry">Is interested in your %1$s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="button_next">next</string>
    <string name="button_register">register</string>
    <string name="nexthand">NextHand</string>
    <string name="slogan">find &amp; share items for a wasteless future</string>
    <string name="contacts">Contacts</string>
    <string name="more_info">First, we\'ll need some information about you &#128585;</string>
</resources>