<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/map" />

    <item
        android:id="@+id/nav_compose"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/compose" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/outline_contact_page_black_24dp"
        android:title="@string/contacts" />
</menu>